--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   weather:
+  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
