--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   weather:
-  url_launcher:
+  url_launcher: 5.7.10
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
